--- a/index.html
+++ b/index.html
@@ -9,6 +9,10 @@
     <script src="main.js" async></script>
 </head>
 <body>
-    
+    <div class="ex10">
+        <input type="number" id="num1" value> 
+        <input type="number" id="num2" value>
+        <button onclick="operation()">Submit</button>
+    </div>
 </body>
 </html>
