--- a/index.html
+++ b/index.html
@@ -12,7 +12,8 @@
     <div class="ex10">
         <input type="number" id="num1" value> 
         <input type="number" id="num2" value>
-        <button onclick="operation()">Submit</button>
+        <button onclick="operation()">Operations</button>
+        <button onclick="area()">Area</button>
     </div>
 </body>
 </html>
