--- a/index.html
+++ b/index.html
@@ -15,5 +15,9 @@
         <button onclick="operation()">Operations</button>
         <button onclick="area()">Area</button>
     </div>
+    <div id="foodList">
+    </div>
+
+
 </body>
 </html>
